parser/src/lexer/snapshots/enderpy__lexer__lexer__tests__test-lexer-0.snap
---
source: src/lexer/lexer.rs
description: 1+2
---
[
    Token {
        kind: Integer,
        value: Number(
            "1",
        ),
        start: 0,
        end: 1,
    },
    Token {
        kind: Plus,
        value: None,
        start: 1,
        end: 2,
    },
    Token {
        kind: Integer,
        value: Number(
            "2",
        ),
        start: 2,
        end: 3,
    },
]
