parser/src/lexer/snapshots/enderpy__lexer__lexer__tests__test-lexer-11.snap
---
source: src/lexer/lexer.rs
description: ;
---
[
    Token {
        kind: SemiColon,
        value: None,
        start: 0,
        end: 1,
    },
]
