parser/src/lexer/snapshots/enderpy__lexer__lexer__tests__test-lexer-14.snap
---
source: src/lexer/lexer.rs
description: "\\"
---
[
    Token {
        kind: BackSlash,
        value: None,
        start: 0,
        end: 1,
    },
]
