parser/src/lexer/snapshots/enderpy__lexer__lexer__tests__test-lexer-17.snap
---
source: src/lexer/lexer.rs
description: "?"
---
[
    Token {
        kind: QuestionMark,
        value: None,
        start: 0,
        end: 1,
    },
]
