parser/src/lexer/snapshots/enderpy__lexer__lexer__tests__test-lexer-20.snap
---
source: src/lexer/lexer.rs
description: +=
---
[
    Token {
        kind: AddAssign,
        value: None,
        start: 0,
        end: 2,
    },
]
