parser/src/lexer/snapshots/enderpy__lexer__lexer__tests__test-lexer-23.snap
---
source: src/lexer/lexer.rs
description: /=
---
[
    Token {
        kind: DivAssign,
        value: None,
        start: 0,
        end: 2,
    },
]
