parser/src/lexer/snapshots/enderpy__lexer__lexer__tests__test-lexer-26.snap
---
source: src/lexer/lexer.rs
description: "&="
---
[
    Token {
        kind: BitAndAssign,
        value: None,
        start: 0,
        end: 2,
    },
]
